--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,9 @@ body{
   padding-left: 30px; 
 }
 
-
+.container{
+  background-color: #000000; 
+}
 input{
   background-color: #fbfbfb; 
   width: 408px; 
